# sunrise-alarm-clock

./: .env.example  .gitmodules  README.md  docker-compose-production.yml  docker-compose.yml
led-api-server/: pyproject.toml
led-api-server/app/alarms/: models.py  threads.py
led-api-server/app/alarms/management/commands/: startalarm.py
led-api-server/app/alarms/migrations/: 0007_alarmconfig.py  0008_delete_alarm.py  0009_alarmconfig_shuffle.py
led-api-server/app/alarms/utils/: alarm_control_singleton.py  mopidy_client.py  stoppable_thread.py  wled_client.py
led-api-server/app/api/: serializers.py  urls.py  views.py  zmq_client.py
led-api-server/app/leds/settings/: base.py  local.py  production.py
led-api-server/deploy/: Dockerfile  supervisor-app.conf  uwsgi.ini
led-api-server/requirements/: requirements.txt
led-frontend/: .eslintrc.js  Dockerfile  LICENSE  README.md  package.json  quasar.conf.js  redeploy.sh  yarn.lock.old
led-frontend/src/: App.vue
led-frontend/src-pwa/: register-service-worker.js
led-frontend/src/boot/: global-components.js  globalConstants.js
led-frontend/src/components/: ApiConnectionStatus.vue  Audio.vue  Card.vue  ChangeColor.vue  ChooseColorPopup.vue  ColorTransitionSelect.vue  ConnectionStatus.vue  DarkCard.Vue  LEDPreview.vue  MopidyConnectionStatus.vue  SetColor.vue  SetColorBtn.vue  ShowAnimation.vue  ShowClock.vue  UpcomingAlarm.vue  Volume.vue  (+6 more)
led-zmq-server/: Dockerfile
led-zmq-server/app/: led_core.py  settings.py  zmq_server.py
led-zmq-server/requirements/: local.txt  production.txt  requirements.txt
(+31 files in other folders)
